--- a/static/css/style.css
+++ b/static/css/style.css
@@ -323,19 +323,34 @@ nav {
     opacity: .85;
 }
 
-.search-icon-box {
+.toggle-icons {
     position: absolute;
-    right: 0;
-    width: 5rem;
-    height: 100%;
+    right: 1.5rem;
+    top: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    overflow: hidden;
 }
 
-.fa-search {
+.toggle-icons>span {
+    height: 100%;
+    width: 100%;
+}
+
+.toggle-icons>span.active {
+    transform: translateY(-100%);
+}
+
+.fa-search,
+.fa-times {
     color: var(--clr-primary-white);
     font-size: 1.75rem;
     font-weight: 600;
-    transform: rotateY(180deg);
     opacity: .85;
+}
+
+.fa-search {
+    transform: rotateY(180deg);
 }
 
 .dropdown-menu {
@@ -345,7 +360,11 @@ nav {
     border-bottom-right-radius: 2rem;
     position: relative;
     z-index: 3;
-    /* top: -15rem; */
+    top: -15rem;
+}
+
+.dropdown-menu.show {
+    top: 0;
 }
 
 .dropdown-menu>ul {
@@ -376,7 +395,7 @@ form {
 .form-group input {
     width: 100%;
     padding: .85rem 1rem;
-    border-radius: .25rem;
+    border-radius: .4rem;
     font-size: 1rem;
     border: none;
     padding-left: 2.4rem;
