--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ Variables
     --clr-primary-white: hsl(0, 0%, 100%);
     --clr-primary-black: hsl(0, 0%, 0%);
     --clr-primary-blue-dark: hsl(218, 50%, 21%);
+    --clr-primary-blue-pale: hsl(223, 30%, 95%);
     --clr-primary-gold: hsl(47, 100%, 61%);
     /* Letter spacing */
     --ls-spaced-main: letter-spacing: 0.01rem;
@@ -83,10 +84,11 @@ h1 {
 }
 
 h2 {
-    font-size: 2.4rem;
-    margin-bottom: 0.75rem;
+    font-size: 2.5rem;
+    margin: 1rem 0;
+    padding: 1rem 1rem 2rem;
     text-align: center;
-    line-height: 1.1;
+    line-height: 1;
 }
 
 
@@ -151,13 +153,17 @@ button {
 
 main {
     margin-top: 0;
+    padding-top: .625rem;
     width: 100%;
     display: grid;
     grid-template-columns: auto 24rem;
+    grid-template-rows: auto auto;
 }
 
 aside {
-    background-color: #005960;
+    /* background-color: #005960; */
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
 }
 
 
@@ -200,7 +206,7 @@ Navbar
 nav {
     width: 100%;
     display: grid;
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 22% 56% 22%;
     grid-template-rows: 8.125rem 4.5rem;
 }
 
@@ -229,7 +235,7 @@ nav {
     position: relative;
 }
 
-.nav>li:hover>a {
+.nav-primary>li:hover>a {
     background-color: hsl(223, 30%, 95%);
     border-radius: 0.25rem;
 }
@@ -245,13 +251,13 @@ nav {
     transition: all 0.35s linear;
 }
 
-.nav>li:hover>ul {
+.nav-primary>li:hover>ul {
     left: 0;
     opacity: 1;
     top: 3.7rem;
 }
 
-.nav>li:hover>ul>li {
+.nav-primary>li:hover>ul>li {
     background-color: hsl(223, 30%, 95%);
 }
 
@@ -314,7 +320,6 @@ nav {
 }
 
 .navbar-brand {
-    padding-right: 1.25rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -323,13 +328,21 @@ nav {
     z-index: 4;
 }
 
+.navbar-brand:first-of-type {
+    padding-left: 1.25rem;
+}
+
+.navbar-brand:last-of-type {
+    padding-right: 1.25rem;
+}
+
 .navbar-brand__main>img {
     height: 4.375rem;
     width: 15.5rem;
 }
 
 .navbar-search {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     position: relative;
 }
 
@@ -508,6 +521,10 @@ h1::after {
     font-weight: 400;
 }
 
+.nav-breadcrumbs>li:first-child>a {
+    padding-left: 0;
+}
+
 .breadcrumb:last-of-type a {
     font-weight: 700;
 }
@@ -556,9 +573,272 @@ h1::after {
 
 /*
 =============== 
+Carousel
+===============
+*/
+
+@keyframes tonext {
+    75% {
+        left: 0;
+    }
+    95% {
+        left: 100%;
+    }
+    98% {
+        left: 100%;
+    }
+    99% {
+        left: 0;
+    }
+}
+
+@keyframes tostart {
+    75% {
+        left: 0;
+    }
+    95% {
+        left: -300%;
+    }
+    98% {
+        left: -300%;
+    }
+    99% {
+        left: 0;
+    }
+}
+
+@keyframes snap {
+    96% {
+        scroll-snap-align: center;
+    }
+    97% {
+        scroll-snap-align: none;
+    }
+    99% {
+        scroll-snap-align: none;
+    }
+    100% {
+        scroll-snap-align: center;
+    }
+}
+
+.carousel * {
+    box-sizing: border-box;
+    scrollbar-color: transparent transparent;
+    /* thumb and track color */
+    scrollbar-width: 0px;
+}
+
+.carousel *::-webkit-scrollbar {
+    width: 0;
+}
+
+.carousel *::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.carousel *::-webkit-scrollbar-thumb {
+    background: transparent;
+    border: none;
+}
+
+.carousel * {
+    -ms-overflow-style: none;
+}
+
+
+/* ol, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+} */
+
+.carousel {
+    position: relative;
+    padding-top: 62.5%;
+    /* filter: drop-shadow(0 0 10px #0003); */
+    perspective: 100px;
+    margin-left: .625rem;
+    margin-bottom: 3rem;
+}
+
+.carousel__viewport {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    overflow-x: scroll;
+    counter-reset: item;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+}
+
+.carousel__slide {
+    position: relative;
+    flex: 0 0 100%;
+    width: 100%;
+    counter-increment: item;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.carousel__slide::marker {
+    color: transparent;
+}
+
+.carousel__slide:first-child {
+    background-image: url(../images/carousel-image-1.jpg);
+}
+
+.carousel__slide:nth-child(2) {
+    background-image: url(../images/carousel-image-2.jpeg);
+}
+
+.carousel__slide:nth-child(3) {
+    background-image: url(../images/carousel-image-3.jpg);
+}
+
+.carousel__slide:nth-child(4) {
+    background-image: url(../images/carousel-image-4.jpeg);
+}
+
+.carousel__slide:nth-child(5) {
+    background-image: url(../images/carousel-image-5.jpg);
+}
+
+.carousel__slide:before {
+    content: counter(item);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -40%, 70px);
+    color: #fff;
+    font-size: 2em;
+}
+
+.carousel__snapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    scroll-snap-align: center;
+}
+
+@media (hover: hover) {
+    .carousel__snapper {
+        animation-name: tonext, snap;
+        animation-timing-function: ease;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+    }
+    .carousel__slide:last-child .carousel__snapper {
+        animation-name: tostart, snap;
+    }
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .carousel__snapper {
+        animation-name: none;
+    }
+}
+
+.carousel:hover .carousel__snapper,
+.carousel:focus-within .carousel__snapper {
+    animation-name: none;
+}
+
+.carousel__navigation {
+    position: absolute;
+    right: 0;
+    bottom: -2rem;
+    left: 0;
+    text-align: center;
+}
+
+.carousel__navigation-list,
+.carousel__navigation-item {
+    display: inline-block;
+}
+
+.carousel__navigation-button {
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: var(--clr-primary-blue-dark);
+    background-clip: content-box;
+    border: 0.25rem solid transparent;
+    border-radius: 50%;
+    font-size: 0;
+    transition: transform 0.1s;
+}
+
+.carousel::before,
+.carousel::after,
+.carousel__prev,
+.carousel__next {
+    position: absolute;
+    top: 0;
+    margin-top: 30%;
+    width: 4rem;
+    height: 4rem;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    font-size: 0;
+    outline: 0;
+}
+
+.carousel::before,
+.carousel__prev {
+    left: 1rem;
+}
+
+.carousel::after,
+.carousel__next {
+    right: 1rem;
+}
+
+.carousel::before,
+.carousel::after {
+    content: '';
+    z-index: 1;
+    background-color: var(--clr-primary-blue-dark);
+    background-size: 1.5rem 1.5rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: #fff;
+    font-size: 2.5rem;
+    line-height: 4rem;
+    text-align: center;
+    pointer-events: none;
+}
+
+.carousel::before {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+.carousel::after {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+
+/*
+=============== 
 Paths
 ===============
 */
+
+.container-tabset {
+    background-color: var(--clr-primary-blue-pale);
+    padding: 1rem;
+}
+
+.tabset {
+    position: relative;
+}
 
 .tabset>input[type="radio"] {
     position: absolute;
@@ -571,51 +851,102 @@ Paths
 
 .tabset>input:first-child:checked~.tab-panels>.tab-panel:first-child,
 .tabset>input:nth-child(3):checked~.tab-panels>.tab-panel:nth-child(2),
-.tabset>input:nth-child(5):checked~.tab-panels>.tab-panel:nth-child(3),
-.tabset>input:nth-child(7):checked~.tab-panels>.tab-panel:nth-child(4),
-.tabset>input:nth-child(9):checked~.tab-panels>.tab-panel:nth-child(5),
-.tabset>input:nth-child(11):checked~.tab-panels>.tab-panel:nth-child(6) {
-    display: block;
+.tabset>input:nth-child(5):checked~.tab-panels>.tab-panel:nth-child(3) {
+    display: flex;
+    align-items: center;
 }
 
 .tabset>label {
     position: relative;
     display: inline-block;
-    padding: 15px 15px 25px;
+    padding: 1.625rem 1rem 2.625rem;
+    margin-bottom: -30px;
     border: 1px solid transparent;
     border-bottom: 0;
     cursor: pointer;
-    font-weight: 600;
+    width: 33.075%;
+    text-align: center;
+    background-color: var(--clr-primary-blue-dark);
+    top: 1rem;
+    /* transition: top .2s; */
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+    opacity: .925;
 }
 
-.tabset>label::after {
-    content: "";
+.tabset>label:nth-of-type(3) {
+    right: -.025rem;
     position: absolute;
-    left: 15px;
-    bottom: 10px;
-    width: 22px;
-    height: 4px;
-    background: #8d8d8d;
+}
+
+.tabset>label>h4 {
+    color: var(--clr-primary-white);
+}
+
+.tabset>label>h4,
+.tabset>input:checked+label>h4 {
+    opacity: unset;
+    margin-bottom: unset;
+}
+
+.tabset>label>h4>span,
+.tabset>input:checked+label>h4>span {
+    font-weight: 500;
+    letter-spacing: unset;
+    font-family: sans-serif;
 }
 
 .tabset>label:hover,
 .tabset>input:focus+label {
-    color: #06c;
-}
-
-.tabset>label:hover::after,
-.tabset>input:focus+label::after,
-.tabset>input:checked+label::after {
-    background: #06c;
+    color: var(--clr-primary-gold);
 }
 
 .tabset>input:checked+label {
-    border-color: #ccc;
-    border-bottom: 1px solid #fff;
-    margin-bottom: -1px;
+    border-color: var(--clr-primary-blue-dark);
+    border-bottom: .0625rem solid #fff;
+    margin-bottom: -.0625rem;
+    background: var(--clr-primary-white);
+    padding-bottom: 2.5rem;
+    top: .025rem;
+    position: relative;
+    z-index: 3;
+    /* transition: top .2s; */
+    opacity: 1;
+}
+
+.tabset>input:checked+label>h4 {
+    color: var(--clr-primary-blue-dark);
+}
+
+.tab-panels {
+    z-index: 2;
+    position: relative;
+    background-color: #fff;
 }
 
 .tab-panel {
-    padding: 30px 0;
-    border-top: 1px solid #ccc;
+    padding: 2.5rem 4rem 2.5rem 3rem;
+    border: .0625rem solid var(--clr-primary-blue-dark);
+    border-bottom-left-radius: .25rem;
+    border-bottom-right-radius: .25rem;
+    min-height: 23.5rem;
+}
+
+.tab-panel img {
+    width: 12rem;
+    margin-right: 1.5rem;
+}
+
+.tab-panel .logo-expertpath {
+    width: 8rem;
+    position: relative;
+    top: 2.5rem;
+}
+
+.tab-panel p {
+    text-align: left;
+}
+
+.tab-panel p:last-of-type {
+    margin-bottom: 0;
 }
