--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,7 @@ h2 {
     padding: 1rem 1rem 2rem;
     text-align: center;
     line-height: 1;
+    color: var(--clr-primary-blue-dark);
 }
 
 
@@ -156,13 +157,13 @@ main {
     padding-top: .625rem;
     width: 100%;
     display: grid;
-    grid-template-columns: auto 24rem;
-    grid-template-rows: auto auto;
+    grid-template-columns: auto 27rem;
+    grid-template-rows: 37rem auto auto;
 }
 
 aside {
     /* background-color: #005960; */
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     grid-column: 2 / 3;
 }
 
@@ -194,6 +195,28 @@ Buttons
     padding: 0.4375rem 1.25rem;
     position: relative;
     z-index: 5;
+}
+
+.btn {
+    font-size: 1.125rem;
+    line-height: 1.1;
+    text-transform: none;
+    font-weight: 600;
+    border-radius: .25rem;
+    padding: 1rem 1.5rem;
+    letter-spacing: var(--ls-spaced-main);
+    color: var(--clr-primary-white);
+    border: 0;
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.btn.btn-brand-1 {
+    background-color: var(--clr-primary-gold);
+    color: var(--clr-primary-blue-dark);
+    min-width: 12.5rem;
 }
 
 
@@ -597,10 +620,10 @@ Carousel
         left: 0;
     }
     95% {
-        left: -300%;
+        left: -400%;
     }
     98% {
-        left: -300%;
+        left: -400%;
     }
     99% {
         left: 0;
@@ -626,7 +649,7 @@ Carousel
     box-sizing: border-box;
     scrollbar-color: transparent transparent;
     /* thumb and track color */
-    scrollbar-width: 0px;
+    scrollbar-width: 0;
 }
 
 .carousel *::-webkit-scrollbar {
@@ -657,7 +680,7 @@ Carousel
     position: relative;
     padding-top: 62.5%;
     /* filter: drop-shadow(0 0 10px #0003); */
-    perspective: 100px;
+    perspective: 6.25rem;
     margin-left: .625rem;
     margin-bottom: 3rem;
 }
@@ -673,6 +696,7 @@ Carousel
     counter-reset: item;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+    padding-bottom: 3rem;
 }
 
 .carousel__slide {
@@ -699,24 +723,30 @@ Carousel
 
 .carousel__slide:nth-child(3) {
     background-image: url(../images/carousel-image-3.jpg);
+    background-position: center bottom;
 }
 
 .carousel__slide:nth-child(4) {
     background-image: url(../images/carousel-image-4.jpeg);
+    background-position: center bottom;
 }
 
 .carousel__slide:nth-child(5) {
     background-image: url(../images/carousel-image-5.jpg);
+    background-position: center bottom;
 }
 
 .carousel__slide:before {
-    content: counter(item);
+    content: "";
     position: absolute;
-    top: 50%;
+    top: 66.04%;
     left: 50%;
-    transform: translate3d(-50%, -40%, 70px);
-    color: #fff;
-    font-size: 2em;
+    transform: translate3d(-50%, -40%, 4.375rem);
+    color: var(--clr-primary-white);
+    background-color: var(--clr-primary-blue-dark);
+    width: 100%;
+    opacity: .75;
+    height: 6%;
 }
 
 .carousel__snapper {
@@ -754,7 +784,7 @@ Carousel
 .carousel__navigation {
     position: absolute;
     right: 0;
-    bottom: -2rem;
+    bottom: 0;
     left: 0;
     text-align: center;
 }
@@ -782,7 +812,7 @@ Carousel
 .carousel__next {
     position: absolute;
     top: 0;
-    margin-top: 30%;
+    margin-top: 24%;
     width: 4rem;
     height: 4rem;
     transform: translateY(-50%);
@@ -809,7 +839,7 @@ Carousel
     background-size: 1.5rem 1.5rem;
     background-repeat: no-repeat;
     background-position: center center;
-    color: #fff;
+    color: var(--clr-primary-white);
     font-size: 2.5rem;
     line-height: 4rem;
     text-align: center;
@@ -824,10 +854,21 @@ Carousel
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
 }
 
+.carousel__slide>.btn {
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.carousel__slide>.btn:hover {
+    transform: translate(-50%, -50%) scale(1.05);
+}
+
 
 /*
 =============== 
-Paths
+Resources
 ===============
 */
 
@@ -838,6 +879,11 @@ Paths
 
 .tabset {
     position: relative;
+}
+
+.container-tabset>h2,
+.tabset {
+    max-width: 47rem;
 }
 
 .tabset>input[type="radio"] {
@@ -860,11 +906,11 @@ Paths
     position: relative;
     display: inline-block;
     padding: 1.625rem 1rem 2.625rem;
-    margin-bottom: -30px;
-    border: 1px solid transparent;
+    margin-bottom: -1.875rem;
+    border: .0625rem solid transparent;
     border-bottom: 0;
     cursor: pointer;
-    width: 33.075%;
+    width: 33.065%;
     text-align: center;
     background-color: var(--clr-primary-blue-dark);
     top: 1rem;
@@ -903,7 +949,7 @@ Paths
 
 .tabset>input:checked+label {
     border-color: var(--clr-primary-blue-dark);
-    border-bottom: .0625rem solid #fff;
+    border-bottom: .0625rem solid var(--clr-primary-white);
     margin-bottom: -.0625rem;
     background: var(--clr-primary-white);
     padding-bottom: 2.5rem;
@@ -921,7 +967,7 @@ Paths
 .tab-panels {
     z-index: 2;
     position: relative;
-    background-color: #fff;
+    background-color: var(--clr-primary-white);
 }
 
 .tab-panel {
@@ -929,7 +975,7 @@ Paths
     border: .0625rem solid var(--clr-primary-blue-dark);
     border-bottom-left-radius: .25rem;
     border-bottom-right-radius: .25rem;
-    min-height: 23.5rem;
+    min-height: 25rem;
 }
 
 .tab-panel img {
@@ -949,4 +995,89 @@ Paths
 
 .tab-panel p:last-of-type {
     margin-bottom: 0;
+}
+
+
+/*
+=============== 
+Lectures
+===============
+*/
+
+.lectures h5 {
+    color: var(--clr-primary-white);
+    font-size: 1.125rem;
+}
+
+.lectures input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+}
+
+.lectures .row {
+    display: flex;
+}
+
+.lectures .row>.col {
+    flex: 1;
+}
+
+.tabs {
+    border-radius: .25rem;
+    overflow: hidden;
+    /* box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5); */
+}
+
+.tab {
+    width: 100%;
+    color: var(--clr-primary-white);
+    overflow: hidden;
+}
+
+.tab-content {
+    max-height: 0;
+    padding: 0 .875rem;
+    color: var(--clr-primary-blue-dark);
+    background: var(--clr-primary-white);
+    transition: all .35s;
+}
+
+.tab-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .625rem .875rem .85rem;
+    background: var(--clr-primary-blue-dark);
+    font-weight: 700;
+    cursor: pointer;
+    line-height: 1;
+    margin-bottom: .05rem;
+}
+
+.tab-label:hover {
+    background: hsl(218, 50%, 16%);
+}
+
+.tab-label::after {
+    content: "\002B";
+    font-size: 3.1rem;
+    text-align: center;
+    font-weight: 400;
+    transition: all .35s;
+}
+
+input:checked+.tab-label,
+input:checked+.tab-label h5 {
+    /* background: hsl(218, 50%, 16%); */
+    color: var(--clr-primary-gold);
+}
+
+input:checked+.tab-label::after {
+    content: "\2212";
+}
+
+input:checked~.tab-content {
+    max-height: 100vh;
+    padding: .875rem;
 }
