--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,13 +159,13 @@ main {
     display: grid;
     grid-auto-flow: dense;
     grid-template-columns: auto 27rem;
-    grid-auto-rows: 35rem minmax(35rem, auto) minmax(35rem, auto) auto;
+    grid-auto-rows: 35rem minmax(35rem, auto) minmax(35rem, auto) minmax(35rem, auto) auto;
     /* gap: 1rem; */
 }
 
 aside {
     /* background-color: #005960; */
-    grid-row: 1 / 5;
+    grid-row: 1 / 6;
     grid-column: 2 / 3;
     padding: 0 .625rem;
     position: relative;
@@ -981,8 +981,12 @@ Media Resources
 
 .tabset-media h3 {
     text-align: center;
-    font-size: 4rem;
-    color: var(--clr-primary-gold);
+    font-size: 4.5rem;
+    color: var(--clr-primary-blue-dark);
+}
+
+.tabset-media .img-wrapper {
+    height: 6.5rem;
 }
 
 .tabset-media img {
@@ -991,11 +995,11 @@ Media Resources
     margin-bottom: 1rem;
 }
 
-.tabset-media .tab-content li:nth-of-type(2) img {
+.tabset-media .tab-content li:first-of-type img {
     width: 3rem;
 }
 
-.tabset-media .tab-content li:nth-of-type(3) img {
+.tabset-media .tab-content li:nth-of-type(2) img {
     width: 10rem;
 }
 
@@ -1010,14 +1014,35 @@ Media Resources
     margin-bottom: 0;
 }
 
+.tabset-media article:nth-of-type(2) ul {
+    flex-direction: column;
+}
+
 .tabset-media article li {
     width: 44%;
     margin-bottom: 1rem;
 }
 
+.tabset-media article:nth-of-type(2) li {
+    width: 100%;
+}
+
 .tabset-media article li a {
     color: var(--clr-primary-black);
     line-height: 1.33;
+}
+
+.tabset-media article:nth-of-type(2) li a {
+    display: flex;
+    text-align: left;
+}
+
+.tabset-media article:nth-of-type(2) li a .media-wrapper {
+    width: 60%;
+}
+
+.tabset-media article:nth-of-type(2) li a .text-wrapper {
+    width: 40%;
 }
 
 
@@ -1039,6 +1064,11 @@ Learning Supports
 .container-tabset>h2,
 .tabset {
     max-width: 47rem;
+}
+
+.container-tabset:nth-of-type(2)>h2 {
+    margin-left: 3rem;
+    max-width: 44rem;
 }
 
 .tabset>input[type="radio"] {
@@ -1155,6 +1185,100 @@ Learning Supports
 
 /*
 =============== 
+Slides
+===============
+*/
+
+.tabset-slides {
+    display: flex;
+    justify-content: center;
+}
+
+.tabset-slides img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.tabset-slides .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.tabset-slides .container {
+    display: grid;
+    grid-template-columns: repeat(4, 12.5vw);
+    grid-template-rows: repeat(4, 12.5vw);
+}
+
+.tabset-slides .image:first-child {
+    grid-column: 2/4;
+}
+
+.tabset-slides .image:nth-of-type(2) {
+    grid-column: 1/3;
+    grid-row: 2/4;
+}
+
+.tabset-slides .image:nth-of-type(3) {
+    grid-column: 3/5;
+    grid-row: 2/4;
+}
+
+.tabset-slides .image:nth-of-type(4) {
+    grid-column: 2/4;
+    grid-row: 3/5;
+}
+
+.tabset-slides .image {
+    margin: 0;
+    height: 0;
+    padding-top: 25vw;
+    overflow: hidden;
+    position: relative;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    /* filter: grayscale(100%); */
+    transition: filter 1s;
+}
+
+.tabset-slides .image:hover {
+    filter: grayscale(0);
+}
+
+.tabset-slides img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    object-position: top;
+    box-sizing: border-box;
+}
+
+.tabset-slides .image:first-child img {
+    object-fit: contain;
+    object-position: center;
+}
+
+.tabset-slides .image::after {
+    content: "";
+    border: 0.5vw solid white;
+    height: 72%;
+    width: 72%;
+    top: 14%;
+    left: 14%;
+    position: absolute;
+    transform: rotate(45deg);
+    transform-origin: center;
+    box-sizing: border-box;
+}
+
+
+/*
+=============== 
 Lectures
 ===============
 */
@@ -1196,6 +1320,18 @@ Lectures
     color: var(--clr-primary-blue-dark);
     background: var(--clr-primary-white);
     transition: all .35s;
+}
+
+.lectures .tab-content>img {
+    width: 10rem;
+}
+
+.lectures .tab:nth-of-type(2)>.tab-content>img {
+    width: 15rem;
+}
+
+.lectures .tab:nth-of-type(3)>.tab-content>img {
+    width: 8rem;
 }
 
 .lectures .tab-content>p {
